concord_macros/tests/dsl/fail/fail_unknown_cache_profile_endpoint.rs
use concord_macros::api;

api! {
    client UnknownCacheProfileEndpointApi {
        base "https://example.com"
    }

    GET Ping
    path ["ping"]
    cache missing
    -> Text<String>
}

fn main() {}
